--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
   <body>
     <!-- this is the start of content -->
     <h1>
-      Hello World!
+      SHIMBER IN ME TIMBERS!
     </h1>
     <p>
-      This starter gives you everything you need to start working on a new
-      website, and nothing more. If you're looking for something a little more
-      opinionated, try remixing
+      Welcome to Squid Game!
+      <button id="startBtn">Start</button>
+      <button id="stopBtn">Stop</button>
+      
       <a href="https://glitch.com/edit/#!/remix/glitch-hello-website"
         >~glitch-hello-website</a
+        
       >.
     </p>
   </body>
