🎺💴 Checkpoint ./index.html:43427363/335

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       Welcome to Squid Game!
       <button id="startBtn">Start</button>
       <button id="stopBtn">Stop</button>
+      <div id="gameButtonArea">
+        <button id="button1">Stop</button>
+        <button id="stopBtn">Stop</button>
+        <button id="stopBtn">Stop</button>
+        <button id="stopBtn">Stop</button>
+         
+    </div>
       
       <a href="https://glitch.com/edit/#!/remix/glitch-hello-website"
         >~glitch-hello-website</a
