🚞📕 Checkpoint ./index.html:43427363/44

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <button id="stopBtn">Stop</button>
       <div id="gameButtonArea">
         <button id="button1">Stop</button>
-        <button id="stopBtn">Stop</button>
-        <button id="stopBtn">Stop</button>
-        <button id="stopBtn">Stop</button>
+        <button id="button2">Stop</button>
+        <button id="button3">Stop</button>
+        <button id="button4">Stop</button>
          
     </div>
       
