🐡🐦 Checkpoint ./index.html:43427363/25 ./style.css:43427363/33

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         Start
       </button>
       
-      <button id="stopBtn">
+      <button id="stopBtn" class = "hidden">
         Stop
       </button>
       
