✋🌟 Checkpoint ./script.js:43427363/216 ./index.html:43427363/59

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </h1>
     <p>
       Welcome to Squid Game!
-      <button id="startBtn">
+      <button id="startBtn" onclick= "startGame()">
         Start
       </button>
       
-      <button id="stopBtn" class = "hidden">
+      <button id="stopBtn" class = "hidden" onclick ="stopGame()">
         Stop
       </button>
       
