--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </button>
       
     <div id="gameButtonArea">
-        <button id="button1" onmousedown="startTone(1)" onmouseup="stopTone()"></button>
-        <button id="button2" onmousedown="startTone(2)" onmouseup="stopTone()"></button>
+        <button id="button1" onclick = "guess(1)" onmousedown="startTone(1)" onmouseup="stopTone()"></button>
+        <button id="button2" onclick = "guess(1)"onmousedown="startTone(2)" onmouseup="stopTone()"></button>
         <button id="button3" onmousedown="startTone(3)" onmouseup="stopTone()"></button>
         <button id="button4" onmousedown="startTone(4)" onmouseup="stopTone()"></button>
          
