🏛👧 Checkpoint ./style.css:43427363/218 ./index.html:43427363/101

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button id="button4" onclick = "guess(4)" onmousedown="startTone(4)" onmouseup="stopTone()"></button>
         <button id="button5" onclick = "guess(5)" onmousedown="startTone(5)" onmouseup="stopTone()"></button>
     </div>
-      
+      <img src="riven.jpg" alt="Riven" width="42" height="42" style="vertical-align:top">
     </p>
   </body>
 </html>
