🚤🐺 Checkpoint ./style.css:43427363/172 ./index.html:43427363/120

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </button>
       
     <div id="gameButtonArea">
-        <button id="button1" onclick = "guess(1)" onmousedown="startTone(1)" onmouseup="stopTone()"><img src="riven.jpg" alt="Riven" width="42" height="42" style="vertical-align:top"> </button>
+        <button id="button1" onclick = "guess(1)" onmousedown="startTone(1)" onmouseup="stopTone()"><img src="https://cdn.glitch.global/6a8e0823-2617-42ad-9516-d44fa0db403c/riven.jpg?v=1648788329080" alt="Riven" width="500" height="50" style="vertical-align:top"> </button>
         <button id="button2" onclick = "guess(2)" onmousedown="startTone(2)" onmouseup="stopTone()"></button>
         <button id="button3" onclick = "guess(3)" onmousedown="startTone(3)" onmouseup="stopTone()"></button>
         <button id="button4" onclick = "guess(4)" onmousedown="startTone(4)" onmouseup="stopTone()"></button>
