👮😺 Checkpoint ./index.html:43427363/501 ./.glitch-assets:43427363/940

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       </button>
       
     <div id="gameButtonArea">
-        <button id="button1" onclick = "guess(1)" onmousedown="startTone(1)" onmouseup="stopTone()"><img src="https://cdn.glitch.global/6a8e0823-2617-42ad-9516-d44fa0db403c/riven.jpg?v=1648788329080" alt="Riven" width="500" height="50" style="vertical-align:top"> </button>
-        <button id="button2" onclick = "guess(2)" onmousedown="startTone(2)" onmouseup="stopTone()"><img src="https://cdn.discordapp.com/attachments/380559582084464646/959331962559012914/unknown.png" alt="Fizz" width="500" height="42" style="vertical-align:top"> </button>
-        <button id="button3" onclick = "guess(3)" onmousedown="startTone(3)" onmouseup="stopTone()"><img src="https://cdn.discordapp.com/attachments/380559582084464646/959331978824515624/unknown.png" alt="Ezeral" width="500" height="42" style="vertical-align:top"> </button>
+        <button id="button1" onclick = "guess(1)" onmousedown="startTone(1)" onmouseup="stopTone()"><img src="https://i.stack.imgur.com/eAepW.png" alt="Riven" width="500" height="50" style="vertical-align:top"> </button>
+        <button id="button2" onclick = "guess(2)" onmousedown="startTone(2)" onmouseup="stopTone()"><img src="https://www.picng.com/upload/spongebob/png_spongebob_77038.png" alt="Fizz" width="500" height="42" style="vertical-align:top"> </button>
+        <button id="button3" onclick = "guess(3)" onmousedown="startTone(3)" onmouseup="stopTone()"><img src="" alt="Ezeral" width="500" height="42" style="vertical-align:top"> </button>
         <button id="button4" onclick = "guess(4)" onmousedown="startTone(4)" onmouseup="stopTone()"><img src="https://cdn.discordapp.com/attachments/380559582084464646/959334010646044672/unknown.png" alt="Riven" width="500" height="42" style="vertical-align:top"> </button>
         <button id="button5" onclick = "guess(5)" onmousedown="startTone(5)" onmouseup="stopTone()"><img src="https://cdn.discordapp.com/attachments/380559582084464646/959332010344738897/unknown.png" alt="Riven" width="1" height="42" style="vertical-align:top"> </button>
     </div>
