🏹👶 Checkpoint ./script.js:43427363/14 ./index.html:43427363/116

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </button>
       
     <div id="gameButtonArea">
-        <button id="button1" onclick = "guess(1)" onmousedown="startTone(1)" onmouseup="stopTone()"><img src="https://i.stack.imgur.com/eAepW.png" alt ="Riven" width="500" height="50" style="vertical-align:top"> </button>
+        <button id="button1" onclick = "guess(1), show()" onmousedown="startTone(1)" onmouseup="stopTone()"><img src="https://i.stack.imgur.com/eAepW.png" class= "hidden" alt ="Riven" width="500" height="50" style="vertical-align:top"> </button>
         <button id="button2" onclick = "guess(2)" onmousedown="startTone(2)" onmouseup="stopTone()"><img src="https://www.picng.com/upload/spongebob/png_spongebob_77038.png" alt="Fizz" width="500" height="42" style="vertical-align:top"> </button>
         <button id="button3" onclick = "guess(3)" onmousedown="startTone(3)" onmouseup="stopTone()"><img src="https://www.pngmart.com/files/13/Charmander-PNG-Transparent.png" alt="Ezeral" width="150" height="42" style="vertical-align:top"> </button>
         <button id="button4" onclick = "guess(4)" onmousedown="startTone(4)" onmouseup="stopTone()"><img src="https://www.downloadclipart.net/large/powerpuff-girls-png-transparent-image.png" alt="Riven" width="500" height="42" style="vertical-align:top"> </button>
