📉💼 Checkpoint ./index.html:43427363/70

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </h1>
     <p>
       Welcome to The Game!
-      <button id="startBtn" onclick= "startGame()">
+      <button id="startBtn" display"onclick= "startGame()">
         Start
       </button>
       
