--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </h1>
     <p>
       Welcome to The Game!
-      <button id="startBtn" display"onclick= "startGame()">
+      <button id="startBtn" onclick= "startGame()">
         Start
       </button>
       
@@ -29,7 +29,7 @@
  </body>
 </html>
     <div id="gameButtonArea">
-        <button id="button1" onclick = "guess(1)" onmousedown="startTone(1)" onmouseup="stopTone()"><img src="https://i.stack.imgur.com/eAepW.png" alt ="Riven" width="500" height="50" class = "hidden"></button>
+        <button id="button1" onclick = "guess(1)" onmousedown="startTone(1)" onmouseup="stopTone()"><img src="https://i.stack.imgur.com/eAepW.png" alt ="Riven" width="500" height="50" visibility: hidden;></button>
         <button id="button2" onclick = "guess(2)" onmousedown="startTone(2)" onmouseup="stopTone()"><img src="https://www.picng.com/upload/spongebob/png_spongebob_77038.png" alt="Fizz" width="500" height="42" style="vertical-align:top"> </button>
         <button id="button3" onclick = "guess(3)" onmousedown="startTone(3)" onmouseup="stopTone()"><img src="https://www.pngmart.com/files/13/Charmander-PNG-Transparent.png" alt="Ezeral" width="150" height="42" style="vertical-align:top"> </button>
         <button id="button4" onclick = "guess(4)" onmousedown="startTone(4)" onmouseup="stopTone()"><img src="https://www.downloadclipart.net/large/powerpuff-girls-png-transparent-image.png" alt="Riven" width="500" height="42" style="vertical-align:top"> </button>
